Bug 1419305 - Part 1: Use MicroTask on CustomElements correctly; r=smaug

MozReview-Commit-ID: EPMfr6hr5fS

--HG--
extra : rebase_source : 51784f7d8b74978847901f57f23730fb0f547ce5